--- a/_data/home_content/index.yaml
+++ b/_data/home_content/index.yaml
@@ -8,18 +8,18 @@
     increasingly digital lives, providing access to the bits and bytes that make
     our personal and professional worlds go round.</p>
 
-    <p>This is my research specificially into the world of API mangement, and
-    how API providers are managing the details of their operations from
-    authentication, to service composition, rate limiting, reporting, and more.
-    This is the oldest area of my research, and has been the seed for every
-    other dimension of my API industry research.</p>
+    <p>This is my research specificially into the world of API performance, and
+    how leading API providers are talking about performance of their APIs, and
+    what tooling and services are using. I'm trying to find best practices, and
+    good examples that other API proividers can follow when ensuring their APIs
+    are delivering.</p>
 
     <p>API Evangelist is a network of data driven projects and APIs which I
     curate and manage as part of this ongoing research, hoping to provide easy
     access to the moving parts of my work. Everything you see here runs on
     Github, making everything forkable, and resuable for both humans and
     machines.</p>
-  tags: Management
+  tags: Performance
 - content_id: home-about
   title: About This Research
   image: 'http://design.apievangelist.com/images/api-evangelist-in-api-we-trust.png'
@@ -40,4 +40,4 @@
     more about API management.</p>
 
     <p>Thanks for your support!</p>
-  tags: Management
+  tags: Performance
