--- a/_data/organizations/index.yaml
+++ b/_data/organizations/index.yaml
@@ -15,7 +15,7 @@
   blog: 'https://blogs.akamai.com'
   blog_rss: 'http://blogs.akamai.com/feeds.html'
   github: 'https://github.com/akamai'
-  image: ''
+  image: 'https://s3.amazonaws.com/kinlane-productions/akamai/akamai-logo.png'
   tags: 'Applications,Cloud,DNS,API LIfeycle,Bots,Performance,Security,DNS Cloud'
 - slug: apica
   name: Apica
@@ -364,7 +364,11 @@
   tags: 'Security,Testing,Monitoring,Virtualization,Performance,API LIfeycle'
 - slug: webpagetest
   name: WebPagetest
-  description: ''
+  description: >-
+    WebPagetest is used for measuring and analyzing the performance of web
+    pages.  There are a lot of options that may seem intimidating at first but
+    doing quick testing is pretty simple.  This guide will walk you through
+    submitting a test and interpreting the results.
   url: >-
     https://sites.google.com/a/webpagetest.org/docs/advanced-features/webpagetest-restful-apis
   short_url: ''
@@ -372,5 +376,6 @@
   blog: ''
   blog_rss: ''
   github: ''
-  image: ''
+  image: >-
+    https://s3.amazonaws.com/kinlane-productions/webpagetest/webpagetest-logo.png
   tags: 'Websites,Performance Testing'
