--- a/_data/building_blocks/index.yaml
+++ b/_data/building_blocks/index.yaml
@@ -1,248 +1,165 @@
-- building_block_id: cpu-usage
-  type: Performance
-  category: Core Performance
-  name: CPU Usage
-  description: Allow for the monitoring of CPU usage.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-cpu.png
-  tags: Performance
-- building_block_id: memory-usage
-  type: Performance
-  category: Core Performance
-  name: Memory Usage
-  description: Allow for the monitoring of memory usage.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-memory.png
-  tags: Performance
-- building_block_id: disk-i/o
-  type: Performance
-  category: Core Performance
-  name: Disk I/O
-  description: Allow for the monitoring of disk I/O.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-hard-drive.png
-  tags: Performance
-- building_block_id: network-i/o
-  type: Performance
-  category: Core Performance
-  name: Network I/O
-  description: Allow for the monitoring of network I/O.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-network.png
-  tags: Performance
-- building_block_id: request-editor
-  type: Performance
-  category: Core Performance
-  name: Request Editor
-  description: Being able to edit the request being made.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-editor.png
-  tags: Performance
-- building_block_id: request-retry
-  type: Performance
-  category: Core Performance
-  name: Request Retry
-  description: Allow the retry of any performance test.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-retry.png
-  tags: Performance
-- building_block_id: request-sharing
-  type: Performance
-  category: Core Performance
-  name: Request Sharing
-  description: Enable the sharing of performance tests.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-sharing.jpeg
-  tags: Performance
-- building_block_id: request-playback
-  type: Performance
-  category: Core Performance
-  name: Request Playback
-  description: Enable the playback of any performance test.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-play.jpg
-  tags: Performance
-- building_block_id: request-scheduling
-  type: Performance
-  category: Core Performance
-  name: Request Scheduling
-  description: Enable the scheduling of performance tests.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-scheduling.jpeg
-  tags: Performance
-- building_block_id: request-compare
-  type: Performance
-  category: Core Performance
-  name: Request Compare
-  description: Allow for the comparison of performance tests.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-compare.png
-  tags: Performance
-- building_block_id: request-scripting
-  type: Performance
-  category: Core Performance
-  name: Request Scripting
-  description: Allow for the scripting againsts tests.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-html-code.png
-  tags: Performance
-- building_block_id: request-automation
-  type: Performance
-  category: Core Performance
-  name: Request Automation
-  description: Allow for the automation of performance tests.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-clock-gear.png
-  tags: Performance
-- building_block_id: request-commenting
-  type: Performance
-  category: Core Performance
-  name: Request Commenting
-  description: Enable testers to comment on tests.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-chat.png
-  tags: Performance
-- building_block_id: latency-testing
-  type: Performance
-  category: Core Performance
-  name: Latency Testing
-  description: Provide latency testing tools.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-speedometer.png
-  tags: Performance
-- building_block_id: simulator
-  type: Performance
-  category: Core Performance
-  name: Simulator
-  description: Provide a performance test simulator.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-siimulation.png
-  tags: Performance
-- building_block_id: region-based-testing
-  type: Performance
-  category: Targeted Performance
-  name: Region Based Testing
-  description: Allow for performance tests from specific geographic regions.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-region.png
-  tags: Performance
-- building_block_id: provider-based-testing
-  type: Performance
-  category: Targeted Performance
-  name: Provider Based Testing
-  description: Allow for performance tests from specific providers.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-api-provider.png
-  tags: Performance
-- building_block_id: basicauth
-  type: Performance
-  category: Authentication
-  name: Basic-Auth
-  description: Using Basic Auth for authentication.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-basic-auth.jpg
-  tags: Performance
-- building_block_id: api-keys
-  type: Performance
-  category: Authentication
-  name: API Keys
-  description: Using API keys for authentication.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-key.png
-  tags: Performance
-- building_block_id: oauth
-  type: Performance
-  category: Authentication
-  name: OAuth
-  description: Using OAuth for authentication.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/oauth-logo.png
-  tags: Performance
-- building_block_id: collections
-  type: Performance
-  category: Utility
-  name: Collections
-  description: Allow performance tests to be organized in collections.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-collection.png
-  tags: Performance
-- building_block_id: command-line-interface
-  type: Performance
-  category: Utility
-  name: Command Line Interface
-  description: Provide a command line interface for performance tests.
-  image: >-
+- building_block_id: web-concepts
+  type: Definitions
+  category: Formats
+  name: Web Concepts
+  descripion: >-
+    APIs are built on the web, and there are numerous web concepts in play that
+    should be considered as part of the API design process.
+  logo: ''
+  tags: Definitions
+- building_block_id: specification
+  type: Definitions
+  category: Formats
+  name: Specification
+  descripion: >-
+    The root specification for the API definition format, providing a base set
+    of rules for all services and tools that employ the spec.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-schema.png
+  tags: Definitions
+- building_block_id: schema
+  type: Definitions
+  category: Formats
+  name: Schema
+  descripion: >-
+    A representation of data model, used as part of an API request, or response,
+    usually in JSON, but increasingly YAML, and Markdown are also used.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-schema.png
+  tags: Definitions
+- building_block_id: generator
+  type: Definitions
+  category: Tooling
+  name: Generator
+  descripion: >-
+    Generating an API definition format from an existing system or platform,
+    outputting the portable machine readable format.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-generate.png
+  tags: Definitions
+- building_block_id: parser
+  type: Definitions
+  category: Tooling
+  name: Parser
+  descripion: >-
+    Parses a machine readable API definition and makes ready for use in specific
+    language, structure, or platform.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-parse.png
+  tags: Definitions
+- building_block_id: validator
+  type: Definitions
+  category: Tooling
+  name: Validator
+  descripion: >-
+    Validates an API definition against its formal specification and schema,
+    producing a valid or invalid response, with as much detail as possible.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-valid.png
+  tags: Definitions
+- building_block_id: converter
+  type: Definitions
+  category: Tooling
+  name: Converter
+  descripion: >-
+    The conversion of an API definition from one format into another, allowing
+    designers to share API definitions in any format.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-conversion.png
+  tags: Definitions
+- building_block_id: commandline
+  type: Definitions
+  category: Tooling
+  name: Command-Line
+  descripion: The usage of machine readable API definitions at the command line.
+  logo: >-
     http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-command-line.png
-  tags: Performance
-- building_block_id: virtualization
-  type: Performance
-  category: Utility
-  name: Virtualization
-  description: Allow performance tests to be conducted against virtualized instances.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-virtualization.png
-  tags: Performance
-- building_block_id: teams
-  type: Performance
-  category: Utility
-  name: Teams
-  description: Enable team environments for performance testing.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-team-male-female.png
-  tags: Performance
-- building_block_id: api
-  type: Performance
-  category: Utility
-  name: API
-  description: Provide an API for integrating with all testing.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/api-commons-icon.png
-  tags: Performance
-- building_block_id: postman
-  type: Performance
-  category: Import
-  name: Postman
-  description: Allow for tests to be imported using Postman.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-postman.png
-  tags: Performance
-- building_block_id: openapi-spec
-  type: Performance
-  category: Import
-  name: OpenAPI Spec
-  description: Allow for tests to be imported using OpenAPI Spec.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-swagger-round.png
-  tags: Performance
-- building_block_id: raml
-  type: Performance
-  category: Import
-  name: RAML
-  description: Allow for tests to be imported using RAML.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-raml.png
-  tags: Performance
-- building_block_id: har
-  type: Performance
-  category: Import
-  name: HAR
-  description: Allow for tests to be imported using HAR files.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-har-file.png
-  tags: Performance
-- building_block_id: junit-xml
-  type: Performance
-  category: Import
-  name: JUnit XML
-  description: Allow for tests to be imported using JUnit XML.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/junit-icon.gif
-  tags: Performance
-- building_block_id: jmeter
-  type: Performance
-  category: 3rd Party
-  name: JMeter
-  description: Provide 3rd pay integration with JMeterr
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/jmeter-logo.jpg
-  tags: Performance
+  tags: Definitions
+- building_block_id: powershell
+  type: Definitions
+  category: Tooling
+  name: Powershell
+  descripion: The usage of machine readable API definitions via the powershell interface.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-command-line.png
+  tags: Definitions
+- building_block_id: aggregator
+  type: Definitions
+  category: Tooling
+  name: Aggregator
+  descripion: Aggregation of APIs using a machine readable API definition format.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-arrow-aggregate.png
+  tags: Definitions
+- building_block_id: translator
+  type: Definitions
+  category: Tooling
+  name: Translator
+  descripion: >-
+    Being able to translate an API definition format from one format to another,
+    either manually or automatically.
+  logo: ''
+  tags: Definitions
+- building_block_id: merging
+  type: Definitions
+  category: Tooling
+  name: Merging
+  descripion: >-
+    Tooling or other APIs that provide for the merging of common API definition
+    formats, allowing the granularity of what elements get merged, or do not get
+    merged. Ideally, this is an API, as well as simple web-based or desktop
+    tooling for API providers and consumers.
+  logo: ''
+  tags: Definitions
+- building_block_id: diff
+  type: Definitions
+  category: Tooling
+  name: Diff
+  descripion: >-
+    Providing side by side comparison of two API definitions, programmatically
+    and visually helping identify between two API definitions. This allows for
+    API architects, designers, and consumers to understand the completeness of
+    two definitions, in relation to each other.
+  logo: ''
+  tags: Definitions
+- building_block_id: editors
+  type: Definitions
+  category: Environment
+  name: Editors
+  descripion: >-
+    API definition editor, allowing for the creation, import, and export of API
+    definition formats, providing a simple, IDE like API editing experience.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-editor.png
+  tags: Definitions
+- building_block_id: ide-plugin
+  type: Definitions
+  category: Environment
+  name: IDE Plugin
+  descripion: >-
+    Providing integration with existing integrated development environments
+    (IDE), giving developers API discovery, documentation, and integration
+    tooling within the IDE.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-editor.png
+  tags: Definitions
+- building_block_id: forms
+  type: Definitions
+  category: Environment
+  name: Forms
+  descripion: >-
+    Dynamically generating an HTML form from an API definition, allow for the
+    structure, and handling to be driven by an API definition.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-forms.png
+  tags: Definitions
+- building_block_id: github
+  type: Definitions
+  category: Environment
+  name: GIthub
+  descripion: >-
+    Allowing for the import, publishing, and syncing of API definitions and
+    schemas to Github for forking, and management using the social coding
+    platform.
+  logo: ''
+  tags: Definitions
